include mongodb database

--- a/views/index.liquid
+++ b/views/index.liquid
@@ -37,8 +37,10 @@
   <div role="main">
     <div id="url_form">
       <form action="/coderstats" method="GET" id="coderstats" name="coderstats">
-        <label for="url">Coderwall user name</label>
-        <input class="cwuser" name="cwuser" id="cwuser">
+        <label for="ghuser">Github user name</label>
+        <input class="username" name="ghuser" id="ghuser">
+        <label for="cwuser">Coderwall user name</label>
+        <input class="username" name="cwuser" id="cwuser">
         <input class="button" type="submit" value="Get Stats">
       </form>
     </div>
