use sinatra_auth_github

--- a/views/index.liquid
+++ b/views/index.liquid
@@ -34,13 +34,14 @@
   <header>
 
   </header>
+
+  <pre>{{settings}}</pre>
+
   <div role="main">
     <div id="url_form">
       <form action="/coderstats" method="GET" id="coderstats" name="coderstats">
         <label for="ghuser">Github user name</label>
         <input class="username" name="ghuser" id="ghuser">
-        <label for="cwuser">Coderwall user name</label>
-        <input class="username" name="cwuser" id="cwuser">
         <input class="button" type="submit" value="Get Stats">
       </form>
     </div>
