calc basic stats

--- a/views/coderstats.liquid
+++ b/views/coderstats.liquid
@@ -1,3 +1,10 @@
+<pre>
+{% for l in languages %}
+{{ l[0] }}: #{{l[1] }}
+{% endfor %}
+</pre>
+
+
 <ul id="github_repos">
   {% for repo in ghrepos %}
     <li>
