--- a/views/index.liquid
+++ b/views/index.liquid
@@ -1,8 +1,9 @@
-<h1>Get your coder stats</h1>
-<div id="user_form">
-  <form action="/coderstats" method="GET" id="coderstats" name="coderstats">
-    <label for="ghuser">Github user name</label>
-    <input class="username" name="ghuser" id="ghuser">
-    <input class="button" type="submit" value="Get Stats">
-  </form>
+<div class="row">
+  <div class="hero-unit" id="userform">
+    <header><h1>Get your coder stats</h1></header>
+    <form action="/coderstats" method="GET" id="coderstats" name="coderstats">
+      <input class="username" name="ghuser" id="ghuser" value="Your Github user name">
+      <input class="button" type="submit" value="Get Stats">
+    </form>
+  </div>
 </div>
