--- a/views/layout.liquid
+++ b/views/layout.liquid
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Coderstats - Get statistics for your code at Github</title>
+    <title>{{ title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -15,7 +15,7 @@
       }
     </style>
     <link href="/vendor/css/bootstrap-responsive.min.css" rel="stylesheet">
-
+    <link href="/css/app.css" rel="stylesheet">
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
       <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -53,8 +53,10 @@
       {{ content }}
     </div>
 
+<a href="https://github.com/yaph/coderstats"><img style="position: fixed; z-index:10000; top: 0; right: 0; border: 0;" src="https://a248.e.akamai.net/assets.github.com/img/e6bef7a091f5f3138b8cd40bc3e114258dd68ddf/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub"></a>
+
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="/vendor/js/bootstrap.min.js"></script>
-
+    <script src="/js/app.js"></script>
   </body>
 </html>
