--- a/views/layout.liquid
+++ b/views/layout.liquid
@@ -16,6 +16,7 @@
     </style>
     <link href="/vendor/css/bootstrap-responsive.min.css" rel="stylesheet">
     <link href="/css/app.css" rel="stylesheet">
+
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
       <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -57,6 +58,11 @@
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="/vendor/js/bootstrap.min.js"></script>
+    {% if stats %}
+      <script src="/vendor/js/chart.js"></script>
+      <script src="/js/chart.js"></script>
+    {% endif %}
     <script src="/js/app.js"></script>
+
   </body>
 </html>
