--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11,5 +11,11 @@ height:2em;
 #userform .username {
 width:35%;
 }
+#mainfooter {
+text-align:center;
+border-top:1px solid #ddd;
+margin-top:1em;
+padding-top:1em;
+}
 .vcard li {list-style:none;}
 .chart {height:250px;}
