--- a/views/layout.liquid
+++ b/views/layout.liquid
@@ -64,7 +64,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="/vendor/js/bootstrap.min.js"></script>
     {% if stats %}
-      <script src="/vendor/js/chart.js"></script>
+      <script src="/vendor/js/chart.min.js"></script>
       <script src="/js/chart.js"></script>
     {% endif %}
     <script src="/js/app.js"></script>
