added about page and license file

--- a/views/layout.liquid
+++ b/views/layout.liquid
@@ -55,7 +55,7 @@
     </div>
 
     <footer class="container" id="mainfooter">
-      <p>Coderstats is brought to you by <a href="http://geeksta.net/">Geeksta</a></p>
+      <p><a href="/">Coderstats</a> is a free service that displays code statistics for Github coders, <a href="/about">learn more about it</a>. Brought to you by <a href="http://geeksta.net/">Geeksta</a>.</p>
     </footer>
 
 
