--- a/views/layout.liquid
+++ b/views/layout.liquid
@@ -8,13 +8,13 @@
     <meta name="author" content="">
 
     <!-- Le styles -->
-    <link href="/vendor/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <style>
       body {
         padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
       }
     </style>
-    <link href="/vendor/css/bootstrap-responsive.min.css" rel="stylesheet">
+    <link href="/vendor/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
     <link href="/css/app.css" rel="stylesheet">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
@@ -55,14 +55,14 @@
     </div>
 
     <footer class="container" id="mainfooter">
-      <p><a href="/">Coderstats</a> is a free service that displays code statistics for Github coders, <a href="/about">learn more about it</a>. Brought to you by <a href="http://geeksta.net/">Geeksta</a>.</p>
+      <p><a href="/">Coderstats</a> is a free service that displays code statistics for <a href="https://github.com/">Github</a> coders, <a href="/about">learn more about it</a>. Brought to you by <a href="http://geeksta.net/">Geeksta</a>.</p>
     </footer>
 
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="/vendor/js/bootstrap.min.js"></script>
+    <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
     {% if stats %}
-      <script src="/vendor/js/chart.min.js"></script>
+      <script src="/vendor/jit/js/chart.min.js"></script>
       <script src="/js/chart.js"></script>
     {% endif %}
     <script src="/js/app.js"></script>
