--- a/views/index.liquid
+++ b/views/index.liquid
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row"><div class="span12">
   <div class="hero-unit" id="userform">
     <header><h1>Get your coder stats</h1></header>
     <form action="/coderstats" method="GET" id="coderstats" name="coderstats">
@@ -6,4 +6,4 @@
       <input class="button" type="submit" value="Get Stats">
     </form>
   </div>
-</div>
+</div></div>
