added logo images, validate user form with html5, dont load app.js, renamed chart to profile

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5,7 +5,7 @@ text-align:center;
 margin:2em 0;
 }
 #userform input {
-font-size:2.5em;
+font:2.4em sans-serif;
 height:2em;
 }
 #userform .username {
