--- a/views/layout.liquid
+++ b/views/layout.liquid
@@ -63,9 +63,8 @@
     <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
     {% if stats %}
       <script src="/vendor/jit/js/chart.min.js"></script>
-      <script src="/js/chart.js"></script>
+      <script src="/js/profile.js"></script>
     {% endif %}
-    <script src="/js/app.js"></script>
 
 <script type="text/javascript">
   var _gaq = _gaq || [];
