--- a/views/index.liquid
+++ b/views/index.liquid
@@ -2,7 +2,7 @@
   <div class="hero-unit" id="userform">
     <header><h1>Get your coder stats</h1></header>
     <form action="/coderstats" method="GET" id="coderstats" name="coderstats">
-      <input class="username" name="ghuser" id="ghuser" value="Your Github user name">
+      <input class="username" name="ghuser" id="ghuser" placeholder="Your Github user name" required>
       <input class="button" type="submit" value="Get Stats">
     </form>
   </div>
