--- a/views/index.liquid
+++ b/views/index.liquid
@@ -14,7 +14,7 @@
   </header>
   {% for u in latest %}
   <div class="span1">
-  <a href="/coder/{{u.login|escape}}"><img src="{{u.user.avatar_url|escape}}" alt="{{u.login|escape}}"></a>
+  <a href="/coder/{{u.gh_login|escape}}"><img src="{{u.avatar_url|escape}}" alt="{{u.gh_login|escape}}"></a>
   </div>
   {% endfor %}
 </div>
