display repo count in tabs and dont display empty tabs

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -28,5 +28,8 @@ border-top:1px solid #ddd;
 margin-top:1em;
 padding-top:1em;
 }
+#languagetablinks a {
+text-transform: capitalize;
+}
 .vcard li {list-style:none;}
 .chart {height:250px;}
