--- a/views/coder.liquid
+++ b/views/coder.liquid
@@ -59,16 +59,22 @@
     <header><h2>Programming Language Statistics</h2></header>
 
     <ul class="nav nav-tabs" id="languagetablinks">
-    {% for idx in stats %}{% if idx[1].total > 0 %}
-      <li{% if 'owned' == idx[0] %} class="active"{% endif %}><a id="link{{ idx[0] }}" href="#{{ idx[0] }}" data-toggle="tab">{{ idx[0] }} ({{ idx[1].total|escape }})</a></li>
-    {% endif %}{% endfor %}
+    {% if stats.owned.total > 0 %}
+      <li class="active"><a id="linkowned" href="#owned" data-toggle="tab">Owned ({{ stats.owned.total|escape }})</a></li>
+    {% endif %}
+    {% if stats.forked.total > 0 %}
+      <li{% if defaulttab == 'forked' %} class="active"{% endif %}><a id="linkforked" href="#forked" data-toggle="tab">Forked ({{ stats.forked.total|escape }})</a></li>
+    {% endif %}
+    {% if stats.all.total > 0 %}
+      <li><a id="linkall" href="#all" data-toggle="tab">All ({{ stats.all.total|escape }})</a></li>
+    {% endif %}
     </ul>
 
     <div class="well"><div id="infovis" class="chart"></div></div>
 
     <div class="tab-content" id="languagetabs">
     {% for idx in stats %}{% if idx[1].total > 0 %}
-    <div class="tab-pane{% if 'owned' == idx[0] %} active{% endif %}" id="{{ idx[0] }}">
+    <div class="tab-pane{% if defaulttab == idx[0] %} active{% endif %}" id="{{ idx[0] }}">
     <table class="table table-bordered">
       <thead>
         <tr>
