added 3 top coder indexes to start page

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -28,5 +28,10 @@ border-top:1px solid #ddd;
 margin-top:1em;
 padding-top:1em;
 }
+#indexstats h2 {
+padding-left:1.4em;
+}
+
 .vcard li {list-style:none;}
 .chart {height:250px;}
+.imgsmall {max-width:30px;}
