--- a/views/index.liquid
+++ b/views/index.liquid
@@ -8,13 +8,94 @@
   </div>
 </div></div>
 
-<div class="row">
-  <header class="span12">
-    <h2>Latest coder statistics</h2>
-  </header>
-  {% for u in latest %}
-  <div class="span1">
-  <a href="/coder/{{u.gh_login|escape}}"><img src="{{u.avatar_url|escape}}" alt="{{u.gh_login|escape}}"></a>
+<div class="row" id="indexstats">
+  <div class="span4">
+    <header>
+      <h2 class="label label-info">Top coders by languages in owned repos</h2>
+    </header>
+    <table class="table table-bordered">
+      <thead>
+        <tr><th>#</th><th>Coder</th><th>Count</th><th>User Info</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for user in users_by_ownedlangs %}
+          <tr>
+            <td>{{ forloop.index }}</td>
+            <td><a href="/coder/{{user.gh_login|escape}}" title="{{user.gh_login|escape}}"><img class="imgsmall" src="{{user.avatar_url|escape}}" alt="{{user.gh_login|escape}}"></a></td>
+            <td>{{user.value.ownedlangs|remove:'.0'}}</td>
+            <td>
+            {% if user.name %}
+              {% if user.homepage %}
+                <a href="{{user.homepage|escape}}">{{user.name|escape}}</a>
+              {% else %}
+                {{user.name|escape}}
+              {% endif %}
+            {% endif %}
+            </td>
+          </tr>
+        {% endfor %}
+      </tbody>
+    </table>
   </div>
-  {% endfor %}
+
+  <div class="span4">
+    <header>
+      <h2 class="label label-info">Top coders by forks of owned repos</h2>
+    </header>
+    <table class="table table-bordered">
+      <thead>
+        <tr><th>#</th><th>Coder</th><th>Count</th><th>User Info</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for user in users_by_ownedforks %}
+          <tr>
+            <td>{{ forloop.index }}</td>
+            <td><a href="/coder/{{user.gh_login|escape}}" title="{{user.gh_login|escape}}"><img class="imgsmall" src="{{user.avatar_url|escape}}" alt="{{user.gh_login|escape}}"></a></td>
+            <td>{{user.value.ownedforks|remove:'.0'}}</td>
+            <td>
+            {% if user.name %}
+              {% if user.homepage %}
+                <a href="{{user.homepage|escape}}">{{user.name|escape}}</a>
+              {% else %}
+                {{user.name|escape}}
+              {% endif %}
+            {% endif %}
+            </td>
+          </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  </div>
+
+  <div class="span4">
+    <header>
+      <h2 class="label label-info">Top coders by watchers of owned repos</h2>
+    </header>
+    <table class="table table-bordered">
+      <thead>
+        <tr><th>#</th><th>Coder</th><th>Count</th><th>User Info</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for user in users_by_ownedwatchers %}
+          <tr>
+            <td>{{ forloop.index }}</td>
+            <td><a href="/coder/{{user.gh_login|escape}}" title="{{user.gh_login|escape}}"><img class="imgsmall" src="{{user.avatar_url|escape}}" alt="{{user.gh_login|escape}}"></a></td>
+            <td>{{user.value.ownedwatchers|remove:'.0'}}</td>
+            <td>
+            {% if user.name %}
+              {% if user.homepage %}
+                <a href="{{user.homepage|escape}}">{{user.name|escape}}</a>
+              {% else %}
+                {{user.name|escape}}
+              {% endif %}
+            {% endif %}
+            </td>
+          </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  </div>
 </div>
