--- a/views/index.liquid
+++ b/views/index.liquid
@@ -31,6 +31,10 @@
               {% else %}
                 {{user.name|escape}}
               {% endif %}
+            {% else %}
+              {% if user.homepage %}
+                <a href="{{user.homepage|escape}}">{{user.homepage|escape}}</a>
+              {% endif %}
             {% endif %}
             </td>
           </tr>
@@ -61,6 +65,10 @@
               {% else %}
                 {{user.name|escape}}
               {% endif %}
+            {% else %}
+              {% if user.homepage %}
+                <a href="{{user.homepage|escape}}">{{user.homepage|escape}}</a>
+              {% endif %}
             {% endif %}
             </td>
           </tr>
@@ -90,6 +98,10 @@
                 <a href="{{user.homepage|escape}}">{{user.name|escape}}</a>
               {% else %}
                 {{user.name|escape}}
+              {% endif %}
+            {% else %}
+              {% if user.homepage %}
+                <a href="{{user.homepage|escape}}">{{user.homepage|escape}}</a>
               {% endif %}
             {% endif %}
             </td>
