added link to chrome extension

--- a/views/layout.liquid
+++ b/views/layout.liquid
@@ -35,12 +35,11 @@
             <span class="icon-bar"></span>
           </a>
           <a class="brand" href="/">Coderstats</a>
-          <!--<div class="nav-collapse">
+          <div class="nav-collapse">
             <ul class="nav">
-              <li><a href="#about">About</a></li>
-              <li><a href="#contact">Contact</a></li>
+              <li><a href="https://chrome.google.com/webstore/detail/necogepejonacpphmlmcagmbjaogpbng">Get the Chrome Extension</a></li>
             </ul>
-          </div>-->
+          </div>
         </div>
       </div>
     </div>
