--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8,6 +8,11 @@ background: url('../img/logo_50x50.png') no-repeat top left;
 padding:10px 0 10px 55px;
 margin-left:0;
 }
+.navbar .nav {
+font-size:20px;
+padding-top:5px;
+float:right;
+}
 
 #userform {
 text-align:center;
