include min when setting achievements, large achievement button

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -44,6 +44,10 @@ padding-top:.2em;
 #indexstats .icon-home {
 padding:.15em;
 }
+#achievements button{
+margin-bottom:.5em;
+cursor:help;
+}
 
 .vcard li {list-style:none;}
 .chart {height:250px;}
