--- a/views/coder.liquid
+++ b/views/coder.liquid
@@ -42,7 +42,7 @@
       </div>
     </div>
 
-    {% if user.achievements %}
+    {% if user.achievements.size > 0 %}
     <div class="row">
       <div class="span3" id="achievements">
         <header><h2>Achievements</h2></header>
