- finally managed to get liquid includes working - added ranking route and example page

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -53,3 +53,9 @@ cursor:help;
 .vcard li {list-style:none;}
 .chart {height:250px;}
 .imgsmall {max-width:35px;}
+
+/* ranking pages */
+#ranking_chart {
+margin-top:40px;
+min-height:500px;
+}
