--- a/views/index.liquid
+++ b/views/index.liquid
@@ -23,20 +23,7 @@
           <tr>
             <td><a href="/coder/{{user.gh_login|escape}}" title="{{user.gh_login|escape}}"><img class="imgsmall" src="{{user.avatar_url|escape}}" alt="{{user.gh_login|escape}}"></a></td>
             <td>{{user.counts.owned.langcount}}</td>
-            <td>
-            <a href="/coder/{{user.gh_login|escape}}" title="{{user.gh_login|escape}}"><i class="icon-signal"></i>Coder stats for {{user.gh_login|escape}}</a><br>
-            {% if user.name %}
-              {% if user.homepage %}
-                <a class="homepage"<a class="homepage" href="{{user.homepage|escape}}"><i class="icon-home"></i>{{user.name|escape}}</a>
-              {% else %}
-                {{user.name|escape}}
-              {% endif %}
-            {% else %}
-              {% if user.homepage %}
-                <a class="homepage"<a class="homepage" href="{{user.homepage|escape}}"><i class="icon-home"></i>{{user.homepage|escape}}</a>
-              {% endif %}
-            {% endif %}
-            </td>
+            <td>{% include 'ranking_coder' %}</td>
           </tr>
         {% endfor %}
       </tbody>
@@ -57,20 +44,7 @@
           <tr>
             <td><a href="/coder/{{user.gh_login|escape}}" title="{{user.gh_login|escape}}"><img class="imgsmall" src="{{user.avatar_url|escape}}" alt="{{user.gh_login|escape}}"></a></td>
             <td>{{user.counts.owned.forkcount}}</td>
-            <td>
-            <a href="/coder/{{user.gh_login|escape}}" title="{{user.gh_login|escape}}"><i class="icon-signal"></i>Coder stats for {{user.gh_login|escape}}</a><br>
-            {% if user.name %}
-              {% if user.homepage %}
-                <a class="homepage"<a class="homepage" href="{{user.homepage|escape}}"><i class="icon-home"></i>{{user.name|escape}}</a>
-              {% else %}
-                {{user.name|escape}}
-              {% endif %}
-            {% else %}
-              {% if user.homepage %}
-                <a class="homepage"<a class="homepage" href="{{user.homepage|escape}}"><i class="icon-home"></i>{{user.homepage|escape}}</a>
-              {% endif %}
-            {% endif %}
-            </td>
+            <td>{% include 'ranking_coder' %}</td>
           </tr>
         {% endfor %}
       </tbody>
@@ -91,20 +65,7 @@
           <tr>
             <td><a href="/coder/{{user.gh_login|escape}}" title="{{user.gh_login|escape}}"><img class="imgsmall" src="{{user.avatar_url|escape}}" alt="{{user.gh_login|escape}}"></a></td>
             <td>{{user.counts.owned.watchercount}}</td>
-            <td>
-            <a href="/coder/{{user.gh_login|escape}}" title="{{user.gh_login|escape}}"><i class="icon-signal"></i>Coder stats for {{user.gh_login|escape}}</a><br>
-            {% if user.name %}
-              {% if user.homepage %}
-                <a class="homepage"<a class="homepage" href="{{user.homepage|escape}}"><i class="icon-home"></i>{{user.name|escape}}</a>
-              {% else %}
-                {{user.name|escape}}
-              {% endif %}
-            {% else %}
-              {% if user.homepage %}
-                <a class="homepage"<a class="homepage" href="{{user.homepage|escape}}"><i class="icon-home"></i>{{user.homepage|escape}}</a>
-              {% endif %}
-            {% endif %}
-            </td>
+            <td>{% include 'ranking_coder' %}</td>
           </tr>
         {% endfor %}
       </tbody>
