--- a/views/layout.liquid
+++ b/views/layout.liquid
@@ -56,9 +56,15 @@
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
-    {% if user.stats.counts %}
+    {% if user.stats.counts or ranking %}
       <script src="/vendor/jit/js/chart.min.js"></script>
-      <script src="/js/profile.js"></script>
+      <script src="/js/vis.js"></script>
+      {% if user.stats.counts %}
+        <script src="/js/profile.js"></script>
+      {% endif %}
+      {% if ranking %}
+        <script src="/js/ranking.js"></script>
+      {% endif %}
     {% endif %}
 <script type="text/javascript">
   var _gaq = _gaq || [];
